--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -57,7 +57,8 @@
     {{ content }}
   </div>
   <footer>
-    &copy; 2010&ndash;2013 Attila Oláh
+    &copy; 2010&ndash;2013
+    <a href="https://plus.google.com/112887311846435666179?rel=author" rel="publisher">Attila Oláh</a>
     <span class="wide">&ndash;</span><br class="narrow">
     contact me at <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>.
   </footer>
