--- a/css/common.less
+++ b/css/common.less
@@ -35,8 +35,8 @@ a:active {
 ::-moz-selection {
   ._selection;
 }
-footer,
-header *,
+body > header *,
+body > footer,
 div[role=main] {
   .rotate;
 }
@@ -45,11 +45,11 @@ div[role=main] {
   box-shadow: 0 2rem 2rem 2rem rgba(0, 0, 0, .5);
 }
 body,
-footer,
+body > footer,
 div[role=main] {
   background: #fdfdfd url(http://aiur.co.rs/img/brillant.png) 0 0 repeat;
 }
-footer {
+body > footer {
   color: #999;
   text-align: center;
   padding: 2.5rem 0 2rem;
