--- a/css/header.less
+++ b/css/header.less
@@ -1,5 +1,5 @@
 /* Header styles. */
-header {
+body > header {
   color: #fff;
   text-shadow: rgba(0, 0, 0, 0.701961) 0 .0625rem 0;
   background: url(/images/w/blackorchid.png);
@@ -90,7 +90,7 @@ header {
 
 /* Wide header styles. */
 @media screen and (min-width: 521px) {
-  header {
+  body > header {
     .content {
       margin: -15rem 1rem 0;
       padding-left: 13rem;
@@ -104,7 +104,7 @@ header {
 
 /* Narrow header styles. */
 @media screen and (max-width: 520px) {
-  header {
+  body > header {
     .content {
       margin: -24rem 0 0;
       text-align: center;
