--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,12 +4,27 @@ title: Attila Oláh
 ---
 <ul class="wrap home">
   {% for post in paginator.posts %}
-  <li class="post">
-    <time class="condensed thin" datetime="{{ post.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ post.date | date: "%d %B %Y" }}</time>
-    <h1 class="condensed"><a href="{{ post.url }}">{{ post.title }}</a></h1>
-    <div class="markdown">
-    {{ post.content }}
-    </div>
+  <li>
+    <article>
+      <header>
+        <time class="condensed thin" datetime="{{ post.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ post.date | date: "%d %B %Y" }}</time>
+        <h1 class="condensed"><a href="{{ post.url }}">{{ post.title }}</a></h1>
+      </header>
+      <div class="markdown">
+        {{ post.content }}
+      </div>
+      <footer>
+        {% if post.tags  %}
+          <ul class="tags">
+            {% for tag in post.tags %}
+              <li>{{ tag }}{% unless forloop.last %},{% endunless %}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+        {% if post.source %}
+          <a rel="source" href="{{ post.source }}">Source</a>
+        {% endif %}
+      </footer>
   </li>
   {% endfor %}
 </ul>
