--- a/css/common.less
+++ b/css/common.less
@@ -40,6 +40,11 @@ body > footer,
 div[role=main] {
   .rotate;
 }
+body > header,
+body > footer,
+div[role=main] {
+  min-width: 18rem;
+}
 div[role=main] {
   min-height: 16rem;
   box-shadow: 0 2rem 2rem 2rem rgba(0, 0, 0, .5);
@@ -59,6 +64,7 @@ time {
   font-size: 1.5rem;
   line-height: 1rem;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 @media only screen and (max-width: 520px) {
   time {
