--- a/css/generic.less
+++ b/css/generic.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic|Roboto+Condensed:400,300&subset=latin,latin-ext);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic|Roboto+Condensed:400,300|Droid+Serif:400italic&subset=latin,latin-ext);
 
 /* Fonts */
 .roboto {
