--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,31 +3,31 @@ layout: base
 title: Attila Oláh
 ---
 <ul class="wrap home">
-  {% for post in paginator.posts %}
+  {% for page in paginator.posts %}
   <li>
     <article>
       <header>
-        <time class="condensed thin" datetime="{{ post.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ post.date | date: "%d %B %Y" }}</time>
+        <time class="condensed thin" datetime="{{ page.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ page.date | date: "%d %B %Y" }}</time>
         <h1 class="condensed">
-          <a href="{{ post.url }}">{{ post.title }}</a>
-          {% if post.link %}
-            <a href="{{ post.source }}" rel="source">{{ post.link }}</a>
+          <a href="{{ page.url }}">{{ page.title }}</a>
+          {% if page.link %}
+            <a href="{{ page.source }}" rel="source">{{ page.link }}</a>
           {% endif %}
         </h1>
       </header>
       <div class="markdown">
-        {{ post.content }}
+        {{ page.content }}
       </div>
       <footer>
-        {% if post.tags  %}
+        {% if page.tags  %}
           <ul class="tags">
-            {% for tag in post.tags %}
+            {% for tag in page.tags %}
               <li>{{ tag }}{% unless forloop.last %},{% endunless %}</li>
             {% endfor %}
           </ul>
         {% endif %}
-        {% if post.source %}
-          <a rel="source" href="{{ post.source }}">Source</a>
+        {% if page.source %}
+          <a rel="source" href="{{ page.source }}">Source</a>
         {% endif %}
       </footer>
   </li>
