--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,31 +1,4 @@
 ---
 layout: base
 ---
-<article class="wrap">
-  <header>
-    <time class="condensed thin" datetime="{{ page.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ page.date | date: "%d %B %Y" }}</time>
-    <h1 class="condensed">
-      {% if page.link %}
-        <a href="{{ page.source }}">{{ page.title }}</a>
-        <a href="{{ page.source }}" rel="source">{{ page.link }}</a>
-      {% else %}
-        {{ page.title }}
-      {% endif %}
-    </h1>
-  </header>
-  <div class="markdown">
-    {{ content }}
-  </div>
-  <footer>
-    {% if page.tags  %}
-      <ul class="tags">
-        {% for tag in page.tags %}
-          <li>{{ tag }}{% unless forloop.last %},{% endunless %}</li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-    {% if page.source %}
-      <a rel="source" href="{{ page.source }}">Source</a>
-    {% endif %}
-  </footer>
-</article>
+{% include post.html %}
