--- a/_includes/video.html
+++ b/_includes/video.html
@@ -5,7 +5,7 @@
       <a href="{{ page.source }}">{{ page.title }}</a>
     </h1>
   </header>
-  <div class="video center">
+  <div class="video center player-{{ page.player }}">
     {{ page.embed }}
   </div>
   {% include postbody.html %}
