--- a/css/video.less
+++ b/css/video.less
@@ -8,7 +8,17 @@ article {
     max-width: 52.875rem;
     margin: 0 auto;
   }
-  .ted {
-    height: 480px;
+  .player-youtube {
+    // Make the player scale but keep the aspect ratio.
+    // See http://stackoverflow.com/a/13625843
+    position: relative;
+    padding-bottom: 61%;
+    height: 0;
+    > iframe {
+      height: 100%;
+    }
+  }
+  .player-ted > iframe {
+    height: 30rem;
   }
 }
