--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -60,7 +60,7 @@
     &copy; 2010&ndash;2013
     <a href="https://plus.google.com/112887311846435666179?rel=author" rel="publisher">Attila Oláh</a>
     <span class="wide">&ndash;</span><br class="narrow">
-    contact me at <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>.
+    <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>
   </footer>
 </body>
 </html>
