--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,7 @@
 ---
 layout: base
 ---
-{% include post.html %}
+<article class="wrap post">
+  {% include post.html %}
+  {% include comments.html %}
+</article>
