--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -1,4 +1,7 @@
 ---
 layout: base
 ---
-{% include video.html %}
+<article class="wrap post">
+  {% include video.html %}
+  {% include comments.html %}
+</article>
