--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,6 +20,7 @@
     })();
 
   </script>
+  <script src="https://apis.google.com/js/plusone.js"></script>
 </head>
 <body class="roboto">
   <header>
