--- a/css/post.less
+++ b/css/post.less
@@ -74,6 +74,11 @@ article {
       float: right;
     }
   }
+  &.post {
+    footer {
+      margin-bottom: 1rem;
+    }
+  }
 }
 @media only screen and (max-width: 520px) {
   article {
