--- a/_includes/postfooter.html
+++ b/_includes/postfooter.html
@@ -2,9 +2,7 @@
   {% if page.tags %}
     <ul class="tags">
       {% for tag in page.tags %}
-        <li>
-          <a href="/archive/#{{ tag | downcase }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
-        </li>
+        <li><a href="/archive/#{{ tag | downcase }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}</li>
       {% endfor %}
     </ul>
   {% endif %}
