--- a/css/post.less
+++ b/css/post.less
@@ -60,6 +60,7 @@ article {
   }
   footer {
     color: #999;
+    position: relative;
     text-transform: lowercase;
     border-top: thin solid #ccc;
     ul, li {
@@ -70,8 +71,35 @@ article {
     li:before {
       content: "#";
     }
+    a {
+      line-height: 24px;
+    }
     a[rel=source] {
       float: right;
+    }
+    .button {
+      height: 24px;
+      position: absolute;
+      overflow: hidden;
+      display: inline-block;
+      top: 0;
+      margin-left: 4px;
+      &.twitter {
+        > iframe {
+          position: relative;
+          top: 2px;
+          left: -9px;
+        }
+        .text {
+          position: absolute;
+          top: 0;
+          left: 0;
+          .body-bg;
+          &:before {
+            content: "+";
+          }
+        }
+      }
     }
   }
   &.post {
