--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -9,18 +9,21 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <script type="text/javascript">
 
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-13035482-4']);
-    _gaq.push(['_trackPageview']);
+    var _gaq = [
+        ['_setAccount', 'UA-13035482-4'],
+        ['_trackPageview']
+      ],
+      ___gcfg = {
+        parsetags: 'explicit'
+      },
+      gp = function () {};
 
     (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
-
   </script>
-  <script src="https://apis.google.com/js/plusone.js"></script>
 </head>
 <body class="roboto">
   <header>
@@ -56,6 +59,7 @@
   </header>
   <div role="main">
     {{ content }}
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
   <footer>
     &copy; 2010&ndash;2013
