--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<article class="wrap post">
+<article class="wrap post"{% if page.lang %}lang="{{ page.lang }}"{% endif %}>
   {% include post.html %}
   {% include comments.html %}
 </article>
