--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -18,9 +18,9 @@ title: Attila Oláh
 <div class="pagination condensed">
   {% if paginator.previous_page %}
     {% if paginator.previous_page == 1 %}
-      <a class="previous" href="/">Previous</a>
+      <a class="previous" href="/" rel="prev">Previous</a>
     {% else %}
-      <a class="previous" href="/{{ paginator.previous_page_path }}">Previous</a>
+      <a class="previous" href="/{{ paginator.previous_page_path }}" rel="prev">Previous</a>
     {% endif %}
   {% endif %}
   <ul>
@@ -42,6 +42,6 @@ title: Attila Oláh
     {% endfor %}
   </ul>
   {% if paginator.next_page %}
-    <a class="next" href="/{{ paginator.next_page_path }}">Next</a>
+    <a class="next" href="/{{ paginator.next_page_path }}" rel="next">Next</a>
   {% endif %}
 </div>
