--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,5 +1,5 @@
 {% include postheader.html %}
-<div class="video center player-{{ page.player }}">
+<div class="video center player-{{ page.player }}" itemprop="video" itemscope itemtype="http://schema.org/VideoObject">
   {{ page.embed }}
 </div>
 {% include postbody.html %}
