--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -42,7 +42,7 @@
       </div>
       <div class="content" itemprop="author" itemscope itemtype="http://data-vocabulary.org/Person">
         <div class="avatar"></div>
-        <h1><a href="{{ site.baseurl }}" itemprop="name"><span itemprop="givenName">Attila</span> <span itemprop="familyName">Ol&aacute;h</span></a></h1>
+        <h1><a href="{{ site.baseurl }}" itemprop="url"><span itemprop="name"><span itemprop="givenName">Attila</span> <span itemprop="familyName">Ol&aacute;h</span></span></a></h1>
         <h2>Full-time dad, part-time web developer.</h2>
         <h2 class="live" itemprop="address">Lives in
           <span itemscope itemtype="http://data-vocabulary.org/PostalAddress">
